# cpp-socket-server-client

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  benchmark.sh  build.sh  hft_benchmark.cpp  hft_benchmark.sh  simple_benchmark.cpp  simple_benchmark.sh  test.sh
include/: client.hpp  hft_server.hpp  interceptors.hpp  interfaces.hpp  server.hpp  services.hpp
src/: client.cpp  client_main.cpp  hft_server.cpp  hft_server_main.cpp  interceptors.cpp  server.cpp  server_main.cpp  services.cpp
